--- a/server/.env
+++ b/server/.env
@@ -6,4 +6,6 @@ ACCESS_TOKEN_EXPIRY=1d
 
 PORT=2000
 
-MONGO_URI_ATLAS=mongodb+srv://vnsingla2005:5aDVXdprvOrrERoI@aiva.irbbcv1.mongodb.net/
+MONGO_URI_ATLAS=mongodb+srv://vnsingla2005:5aDVXdprvOrrERoI@aiva.irbbcv1.mongodb.net/?retryWrites=true&w=majority&appName=AIVA
+GEMINI_API_KEY=AIzaSyCnO0m86kELQ19Hw8SBSKc-IM48sIi_oHQ
+
