--- a/server/.env
+++ b/server/.env
@@ -6,6 +6,8 @@ ACCESS_TOKEN_EXPIRY=1d
 
 PORT=2000
 
-MONGO_URI_ATLAS=mongodb+srv://vnsingla2005:5aDVXdprvOrrERoI@aiva.irbbcv1.mongodb.net/?retryWrites=true&w=majority&appName=AIVA
+MONGO_URI_ATLAS=mongodb+srv://vnsingla2005_db_user:XgLQ6Qy0wn1lsOEG@smartofficeva.5nziaby.mongodb.net/
 GEMINI_API_KEY=AIzaSyCnO0m86kELQ19Hw8SBSKc-IM48sIi_oHQ
 
+EMAIL_USER=vnsingla2005@gmail.com
+EMAIL_PASS=pakpdekehxlhwdxz
