--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,13 @@
     "@google/genai": "^1.15.0",
     "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
+    "chrono-node": "^2.8.4",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "openai": "^5.15.0"
   },
