--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "mongoose": "^8.18.0",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
-    "openai": "^5.15.0"
+    "openai": "^5.15.0",
+    "pdfkit": "^0.17.2"
   },
   "type": "module"
 }
