--- a/server/.env
+++ b/server/.env
@@ -11,3 +11,7 @@ GEMINI_API_KEY=AIzaSyCnO0m86kELQ19Hw8SBSKc-IM48sIi_oHQ
 
 EMAIL_USER=vnsingla2005@gmail.com
 EMAIL_PASS=pakpdekehxlhwdxz
+
+CLOUDINARY_CLOUD_NAME = df2drf2qn
+CLOUDINARY_KEY = 842561597695237
+CLOUDINARY_SECRET = yxNvTtQflnmjUtJ-L4EFCJxeeO8
