--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "chrono-node": "^2.8.4",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -12,6 +13,7 @@
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "openai": "^5.15.0",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2"
   },
   "type": "module"
