--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@google/genai": "^1.15.0",
     "@google/generative-ai": "^0.24.1",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "chrono-node": "^2.8.4",
     "cloudinary": "^2.7.0",
@@ -14,7 +15,8 @@
     "nodemon": "^3.1.10",
     "openai": "^5.15.0",
     "pdf-lib": "^1.17.1",
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
+    "streamifier": "^0.1.1"
   },
   "type": "module"
 }
