--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-pdf": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
