--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "openai": "^5.15.0",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "string-similarity": "^4.0.4"
   },
   "type": "module"
 }
