--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,14 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "chrono-node": "^2.8.4",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "^1.37.3",
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
@@ -23,5 +23,9 @@
     "streamifier": "^0.1.1",
     "string-similarity": "^4.0.4"
   },
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  }
 }
