--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,18 @@
   "dependencies": {
     "@google/genai": "^1.15.0",
     "@google/generative-ai": "^0.24.1",
+    "agenda": "^5.0.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "chrono-node": "^2.8.4",
     "cloudinary": "^1.37.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "markdown-it": "^14.1.0",
     "mongoose": "^8.18.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
@@ -20,6 +23,7 @@
     "openai": "^5.15.0",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
+    "puppeteer": "^24.29.1",
     "streamifier": "^0.1.1",
     "string-similarity": "^4.0.4"
   },
